Usernameplaceholder for mobile view

--- a/intranet.html
+++ b/intranet.html
@@ -896,9 +896,9 @@
                      aria-labelledby="headerMobileProfile_toggle">
                   <div class="o-headerMobileProfile__dropdownContainer">
                     <div class="o-headerMobileProfile__dropdownContent">
-                      <div class="o-headerMobileProfile__dropdownUsername">
+                      <div class="o-headerMobileProfile__dropdownUsername" id="usernamePlaceholder">
 
-                        robiwulf
+
                       </div>
 
                       <ul class="o-headerMobileProfile__dropdownLinks">
