Usernameplaceholder for mobile view

--- a/intranet.html
+++ b/intranet.html
@@ -896,8 +896,8 @@
                      aria-labelledby="headerMobileProfile_toggle">
                   <div class="o-headerMobileProfile__dropdownContainer">
                     <div class="o-headerMobileProfile__dropdownContent">
-                      <div class="o-headerMobileProfile__dropdownUsername" id="usernamePlaceholder">
-
+                      <div class="o-headerMobileProfile__dropdownUsername" >
+                        <span id="usernamePlaceholder"></span>
 
                       </div>
 
